// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly renders correctly accessibility props 1`] = `
<div
  className="avatar monday-style-avatar large monday-style-avatar--large"
  data-testid="avatar"
  style={Object {}}
>
  <div
    aria-hidden={true}
    className="circle monday-style-avatar_circle circleText monday-style-avatar_circle--text"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={-1}
  >
    <span
      className="text monday-style-avatar-content_text textLarge monday-style-avatar-content_text--large"
      data-testid="avatar-content"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly an icon 1`] = `
<div
  className="avatar monday-style-avatar large monday-style-avatar--large"
  data-testid="avatar"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="circle monday-style-avatar_circle circleText monday-style-avatar_circle--text"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={0}
  >
    <span
      className="text monday-style-avatar-content_text textLarge monday-style-avatar-content_text--large"
      data-testid="avatar-content"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly square avatar 1`] = `
<div
  className="avatar monday-style-avatar large monday-style-avatar--large"
  data-testid="avatar"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="circle monday-style-avatar_circle circleText monday-style-avatar_circle--text square monday-style-avatar_circle--is-square"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={0}
  >
    <span
      className="text monday-style-avatar-content_text textLarge monday-style-avatar-content_text--large"
      data-testid="avatar-content"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with badges 1`] = `
<div
  className="avatar monday-style-avatar large monday-style-avatar--large"
  data-testid="avatar"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="circle monday-style-avatar_circle circleText monday-style-avatar_circle--text"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={0}
  >
    <span
      className="text monday-style-avatar-content_text textLarge monday-style-avatar-content_text--large"
      data-testid="avatar-content"
    />
  </div>
  <div
    className="badges monday-style-avatar_badges"
  >
    <div
      className="badge monday-style-avatar_badge badgeTopLeft monday-style-avatar_badge--top-left"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="badge monday-style-avatar_badge badgeTopRight monday-style-avatar_badge--top-right"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="badge monday-style-avatar_badge badgeBottomLeft monday-style-avatar_badge--bottom-left"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="badge monday-style-avatar_badge badgeBottomRight monday-style-avatar_badge--bottom-right"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with damaged src badges 1`] = `
<div
  className="avatar monday-style-avatar large monday-style-avatar--large"
  data-testid="avatar"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="circle monday-style-avatar_circle circleText monday-style-avatar_circle--text"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={0}
  >
    <span
      className="text monday-style-avatar-content_text textLarge monday-style-avatar-content_text--large"
      data-testid="avatar-content"
    />
  </div>
  <div
    className="badges monday-style-avatar_badges"
  >
    <div
      className="badge monday-style-avatar_badge badgeTopLeft monday-style-avatar_badge--top-left"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="badge monday-style-avatar_badge badgeTopRight monday-style-avatar_badge--top-right"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="badge monday-style-avatar_badge badgeBottomLeft monday-style-avatar_badge--bottom-left"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="badge monday-style-avatar_badge badgeBottomRight monday-style-avatar_badge--bottom-right"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with empty props 1`] = `
<div
  className="avatar monday-style-avatar large monday-style-avatar--large"
  data-testid="avatar"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="circle monday-style-avatar_circle circleText monday-style-avatar_circle--text"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={0}
  >
    <span
      className="text monday-style-avatar-content_text textLarge monday-style-avatar-content_text--large"
      data-testid="avatar-content"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with image 1`] = `
<div
  className="avatar monday-style-avatar large monday-style-avatar--large"
  data-testid="avatar"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="circle monday-style-avatar_circle circleText monday-style-avatar_circle--text"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={0}
  >
    <span
      className="text monday-style-avatar-content_text textLarge monday-style-avatar-content_text--large"
      data-testid="avatar-content"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with image and text 1`] = `
<div
  className="avatar monday-style-avatar large monday-style-avatar--large"
  data-testid="avatar"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="circle monday-style-avatar_circle circleText monday-style-avatar_circle--text"
    style={Object {}}
    tabIndex={0}
  >
    <span
      className="text monday-style-avatar-content_text textLarge monday-style-avatar-content_text--large"
      data-testid="avatar-content"
    >
      Name
    </span>
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with not valid image 1`] = `
<div
  className="avatar monday-style-avatar large monday-style-avatar--large"
  data-testid="avatar"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="circle monday-style-avatar_circle circleText monday-style-avatar_circle--text"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={0}
  >
    <span
      className="text monday-style-avatar-content_text textLarge monday-style-avatar-content_text--large"
      data-testid="avatar-content"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with text 1`] = `
<div
  className="avatar monday-style-avatar large monday-style-avatar--large"
  data-testid="avatar"
  style={Object {}}
>
  <div
    aria-hidden={false}
    className="circle monday-style-avatar_circle circleText monday-style-avatar_circle--text"
    style={
      Object {
        "backgroundColor": "var(--color-chili-blue",
      }
    }
    tabIndex={0}
  >
    <span
      className="text monday-style-avatar-content_text textLarge monday-style-avatar-content_text--large"
      data-testid="avatar-content"
    />
  </div>
</div>
`;
